--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" type="image/svg+xml" href="/Maggie.svg">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Margaret Okpani-Profilecard</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="profile-card">
-            <img
-                data-testid="profilePicture"
-                class="profile-image"
-                src="/image/mp.png"
-                alt="profile picture"
-            >
+            <div class="img-container">
+                <img
+                    data-testid="profilePicture"
+                    class="profile-image"
+                    src="/image/profilePicture.png"
+                    alt="profile picture"
+                >
+            </div>
             <div class="profile-info">
                 <h1 data-testid="fullName">Margaret Okpani</h1>
                 <h2 data-testid="jobTitle">Product Designer</h2>
-                <p data-testid="shortBio">Goal driven professional with a background in architecture, environmental design and banking. 4+ years of expertise in enhancing operational efficiency, strategic design  practices, compliance, and seamless business operations. Committed to driving organizational success through meticulous attention to detail, proactive problem-solving, and dedication to excellence. Beyond work, I find inspiration in chess, anime, and tennis; fueling my creativity, strategic thinking, and innovative approach to design and problem-solving.</p>
+                <p class="short-bio" data-testid="shortBio">Goal driven professional with a background in architecture, environmental design and banking. 4+ years of expertise in enhancing operational efficiency, strategic design  practices, compliance, and seamless business operations. Committed to driving organizational success through meticulous attention to detail, proactive problem-solving, and dedication to excellence. Beyond work, I find inspiration in chess, anime, and tennis; fueling my creativity, strategic thinking, and innovative approach to design and problem-solving.</p>
                 <p data-testid="currentLocation">
                     <strong>Location:</strong>
                     Lagos, Nigeria
